[package]
name = "font8x8"
version = "0.1.1"
authors = ["Joaquin Rosales <globojorro@gmail.com>"]
description = "8x8 monochrome bitmap font for rendering."
homepage = "https://github.com/saibatizoku/font8x8-rs"
repository = "https://github.com/saibatizoku/font8x8-rs"
readme = "README.md"
keywords = ["font", "8bit", "8-bit", "bitmap", "monochrome"]
categories = ["rendering"]
license = "Unlicense"

[dependencies]

# To disable all features, run `cargo build` with the `--no-default-features` option.
# Doing  This only includes the constants.
[features]
default = ["unicode"]

# adds strong-typed unicode encoding and decoding, as well
# as Default, Debug, Display, Clone, implementations.
unicode = []
